fix mobile layout issues.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,32 +34,44 @@ body {
   justify-content: flex-end;
   padding: 25px;
   width: 100%;
+  Border: 2px solid black;
+}
+
+#screenSpan {
+  border: 2px solid black;
+  width: 100%;
+  text-align: right;
+}
+
+.contentContainer {
+  display: flex;
+  flex-wrap: wrap;
+  height: 90%;
+  width: 100%;
+}
+
+.clearContents {
+  display: flex;
+  width: 100%;
+  height: 20%;
 }
 
 .containerNumbers {
   display: flex;
-  height: 90%;
-  width: 75%;
+  height: 80%;
+  width: 100%;
   flex-wrap: wrap;
 }
 
 .clear {
   width: 50%;
 }
+
 .one {
-  width: 33%;
-}
-
-.equals {
-  width: 66%;
-}
-
-.containerSigns {
+  height: 25%;
   width: 25%;
-  height: 90%;
-  display: flex;
-  flex-wrap: wrap;
 }
+
 @media only screen and (max-width: 400px){
 
 }
